# tedit

./: .gitignore  CMakeLists.txt  Readme.md  notes.txt  run.sh
inc/: Buf.h  Tab.h  TeditException.h
src/: Buf.cc  CMakeLists.txt  Tab.cc  main.cc
test/: CMakeLists.txt
